kevins first push

--- a/.env.example
+++ b/.env.example
@@ -1,26 +1,26 @@
 # Your dev database username
-DEV_DB_USERNAME='CHANGEME'
+DEV_DB_USERNAME='kevin'
 
 # Your dev database password
-DEV_DB_PASSWORD='CHANGEME'
+DEV_DB_PASSWORD='db_password'
 
 # Your test database username
-TEST_DB_USERNAME='CHANGEME'
+TEST_DB_USERNAME='db_testing'
 
 # Your test database password
-TEST_DB_PASSWORD='CHANGEME'
+TEST_DB_PASSWORD='login'
 
 # Default password used for admin users during seed
-DEFAULT_PASSWORD='CHANGEME'
+DEFAULT_PASSWORD='default'
 
 # Format: '{admin_name: "admin_email@domain.com"}'
-ADMINS='CHANGEME'
+ADMINS='{kevin: "kevin@gmail.com"}'
 
 # Test organization user account email for manual testing
-TEST_USER_EMAIL='CHANGEME'
+TEST_USER_EMAIL='kevin1@gmail.com'
 
 # Test organization user account password
-TEST_USER_PASSWORD='CHANGEME'
+TEST_USER_PASSWORD='login13'
 
 RECAPTCHA_SITE_KEY='CHANGEME'
 RECAPTCHA_SECRET_KEY='CHANGEME'
